--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-spinkit",
+  "name": "react-native-spinkit-sk",
   "version": "1.0.2",
   "description": "A collection of animated loading indicators for React Native",
   "main": "index.js",
